--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="main">
+    <main class="main">
       <div class="img container">
         <img src="img/image-qr-code.png" alt="QR code" />
       </div>
       <div class="text container">
-        <h2>Improve your front-end skills by building projects</h2>
+        <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
-    </div>
+    </main>
   </body>
 </html>
